--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,9 +7,9 @@
     --slate: rgb(42, 42, 63);
     --green: green;
     --red: rgb(235, 41, 41);
-    --orange: orange;
-    --yellow: yellow;
-    --purple: rgb(223, 47, 223);    
+    --orange: rgb(223, 147, 7);
+    --yellow: #e9e939;
+    --purple: rgb(189, 39, 189);    
 }
 
 body {
@@ -99,10 +99,12 @@ h2 {
 }
 
 /* uv index color styles */
-#uvi {
+.uvi {
     border-radius: 3px;
-    padding: 3px 5xp;
+    padding: 3px 12xp;
     color: var(--white);
+    font-weight: bold;
+
 }
 
 .uv-low {
