--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,9 +127,10 @@ h2 {
 }
 
 /* 5 day forecast style */
-.forecast-intro {
-    font-size: 15px;
+#forecast-intro {
+    font-size: 20px;
     font-weight: bold;
+    margin: 10px;
 }
 
 .forecast-future {
