--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,10 +68,9 @@ body {
     font-weight: bold;
 }
 
-.btn-container {
+#btn-container {
     border-top: 2px solid var(--black);
-    width: 90%;
-    margin: 5px;
+    margin: 10px;
     display: flex;
     flex-wrap: wrap;
 }
@@ -81,7 +80,7 @@ body {
     background-color: var(--gray);
 }
 
-/* city current forcast style */
+/* current forcast style */
 #results-container {
     text-align: left;
 }
@@ -101,7 +100,7 @@ h2 {
 /* uv index color styles */
 #uvi {
     border-radius: 3px;
-    padding: 3px 12xp;
+    padding: 3px 12px;
     color: var(--white);
     font-weight: bold;
 }
@@ -128,12 +127,31 @@ h2 {
 
 /* 5 day forecast style */
 #forecast-intro {
-    font-size: 20px;
+    font-size: 25px;
     font-weight: bold;
     margin: 10px;
 }
 
-.forecast-future {
+.forecast-body {
     color: var(--white);
     background-color: var(--slate);
+    margin: 5px;
+    padding: 2px;
+    width: 18%;
+}
+
+/* .day-title {
+    font-size: 18px;
+} */
+
+.card-text {
+    font-size: 13px;
+}
+
+.card-img {
+    width: 50%;
+}
+
+.card-body {
+    line-height: 1.2;
 }
