--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,7 @@ body {
     margin: 10px;
     display: flex;
     flex-wrap: wrap;
+    padding-top: 10px;
 }
 
 .btn-city {
@@ -140,9 +141,9 @@ h2 {
     width: 18%;
 }
 
-/* .day-title {
-    font-size: 18px;
-} */
+#forecast-future {
+    justify-content: center;
+}
 
 .card-text {
     font-size: 13px;
