--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
     --lightblue: #77a9f3;
     --darkblue: #0d3d85;
     --gray: rgb(160, 162, 165);
-    --slate: rgb(46, 54, 100);
+    --teal: rgb(95, 171, 206);
     --green: green;
     --red: rgb(235, 41, 41);
     --orange: rgb(223, 147, 7);
@@ -140,7 +140,7 @@ h2 {
 
 .forecast-body {
     color: var(--white);
-    background-color: var(--slate);
+    background-color: var(--teal);
     margin: 5px;
     padding: 2px;
     width: 18%;
